--- a/publcations/docker-compose.yaml
+++ b/publcations/docker-compose.yaml
@@ -1,25 +1,39 @@
 version: "3.8"
 services:
-  postgres:
-    container_name: posts-postgres
+  pub-db:
+    container_name: publications-pg
     image: postgres
     volumes:
       - pg-data:/var/lib/postgresql/data/pub/posts
     env_file:
-     - .env
+     - postgres.env
     ports:
      - :"5432:5432"
     restart: unless-stopped
-  app:
-    container_name: posts
+    networks:
+     - pub-backend
+  pub-app:
+    container_name: publications
     build: .
+    links:
+     - "pub-db:database"
+    volumes:
+     - log-data:./log/
     env_file:
-     - .env
+     - app.env
+     - jwt.env
     ports:
-     - "5431:5432"
      - "8080:8080"
     depends_on:
-     - postgres
+     - pub-pg
     restart: unless-stopped
+    networks:
+     - pub-backend
 volumes:
   pg-data:
+  log-data:
+networks:
+  pub-backend:
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.host_bind_ipv4: "127.0.0.1"
